# GORKH

./: .env.prod.example  .gitignore  .prettierignore  AGENTS.md  GORKH_NEXT_30_DAYS.md  README.md  VERSION  cloak-docs.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: desktop-ipc.toml
apps/desktop/src-tauri/src/: lib.rs  local_ai.rs  main.rs  workspace.rs
apps/desktop/src-tauri/src/agent/: executor.rs  mod.rs  planner.rs  recorder.rs  vision.rs
apps/desktop/src-tauri/src/agent/providers/: claude.rs  deepseek.rs  gorkh_free.rs  local_compat.rs  mod.rs  moonshot.rs  native_ollama.rs  openai.rs  openai_format.rs
apps/desktop/src-tauri/src/agent/tools/: mod.rs
apps/desktop/src-tauri/src/llm/: claude.rs  error.rs  gorkh_free.rs  mod.rs  native_ollama.rs  openai.rs  openai_compat.rs
apps/desktop/src-tauri/src/local_ai/: model_compatibility.rs
docs/: ADVANCED_AGENT.md  MULTI_LLM_PROVIDER_SUMMARY.md  QWEN_AGENT_SUMMARY.md  agent-architecture-spec.md  ai-engineering-system.md  byo-key-diagnosis.md  codebase-audit.md  deploy-render-vercel.md  deploying.md  error-tracking.md  free-tier-architecture.md  freeai-diagnosis.md  ios-packaging.md  local-llm.md  multi-llm-provider-architecture.md  native-model-training.md  phase-1-5-prerun-prediction.md  phase-1-5-test-procedure.md  production-readiness.md  protocol.md  provider-selection-ui.md  (+15 more)
(+685 files in other folders)
