[package]
name = "ai-operator-desktop"
version = "0.0.4"
description = "AI Operator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_operator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }
enigo = "0.1"
